Border-radius and z-index fixes

--- a/packages/editor/src/components/networkAccountSelector/style.less
+++ b/packages/editor/src/components/networkAccountSelector/style.less
@@ -22,9 +22,9 @@
     color: white;
     margin-left: 4px;
     border: 1px solid #595959;
-    border-radius: 4px;
     margin-top: 8px;
     margin-bottom: 8px;
+    z-index: 3;
     .selector {
         display: flex;
         align-items: center;
