--- a/packages/editor/src/components/projectEditor/panels/explorer/items/style.less
+++ b/packages/editor/src/components/projectEditor/panels/explorer/items/style.less
@@ -158,7 +158,6 @@ select {
     z-index: 1;
     min-width: 233px;
     z-index: 5;
-    border-radius: 4px;
     padding: 4px 0;
     div {
         display: flex;
