--- a/packages/editor/src/components/projectEditor/panes/style.less
+++ b/packages/editor/src/components/projectEditor/panes/style.less
@@ -107,7 +107,6 @@
             min-width: 180px;
             padding: 4px 0;
             z-index: 5;
-            border-radius: 4px;
             .item {
                 display: flex;
                 align-items: center;
