--- a/packages/editor/src/style/menu.less
+++ b/packages/editor/src/style/menu.less
@@ -3,7 +3,6 @@
     position: absolute;
     right: 40px;
     top: 45px;
-    border-radius: 4px;
     background-color: #141414;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
